# rust-docker-web

./: Cargo.toml  Dockerfile  docker-image-build.sh  image-build.sh  rust-docker-web.yaml  rust-service.yaml
src/: main.rs
