[package]
name = "rust-web-app"
version = "0.1.0"
authors = ["Ratul Buragohain <ratul75@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.4.0",features = ["macros", "rt-multi-thread"]}
warp = "0.3.1"
